--- a/src/App.scss
+++ b/src/App.scss
@@ -8,8 +8,30 @@
     .col-5 {
         padding: 0px;
     }
-    .col-5 {
-        padding: 1px;
+
+    .col-2 {
+        padding: 2px;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+
+    #dropdowns-box {
+        max-width: 50%;
+        margin-left: 25%;
+        margin-top: 3%;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+
+    #input-box {
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    
+    #translation-box {
+        margin-left: 15%;
+        margin-right: 15%;
     }
 }
 
@@ -46,7 +68,17 @@
     margin-top: 4px;
 }
 
-.toggle-btn {
+#toggle-btn {
     border-radius: 50%;
     background-color: white;
+}
+
+#input-box {
+    resize: none;
+    box-shadow: 0px 10px 10px -10px;
+}
+
+#translation-box {
+    resize: none;
+    background-color: rgba(146, 146, 146, 0.1);
 }
