--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
     #toggle-btn {
         position: relative;
         right: 6px;
+        bottom: 1px;
     }
 }
 
@@ -32,6 +33,10 @@
         margin-left: 15%;
         height: 100px;
     }
+
+    #translation-adds {
+        margin-left: 15%;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -54,6 +59,10 @@
         width: 60%;
         margin-left: 20%;
         height: 100px;
+    }
+
+    #translation-adds {
+        margin-left: 20%;
     }
 }
 
@@ -79,12 +88,12 @@
 
 #dropdown-basic-button {
     padding: 10px;
-    color: #969696;
+    color: #808080;
     background-color: white;
 }
 
 .material-icons {
-    color: #969696;
+    color: #808080;
     padding: 1px;
     font-size: 22px;
     margin-top: 4px;
@@ -92,6 +101,7 @@
 
 #toggle-btn {
     border-radius: 50%;
+    margin-top: 3px;
     background-color: white;
 }
 
@@ -107,4 +117,25 @@
 #translation-box {
     resize: none;
     background-color: rgba(146, 146, 146, 0.1);
+}
+
+#translation-adds {
+    height: 100%;
+    border-left: 1px solid rgb(187, 187, 187);
+}
+
+.form-control {
+    color: black;
+}
+
+h6 {
+    margin-left: 10px;
+    margin-bottom: 3px;
+    font-size: 90%;
+    color: #1a73e8;
+}
+
+p {
+    margin-left: 10px;
+    font-size: 90%;
 }
