--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,11 @@
     #translation-adds {
         margin-left: 15%;
     }
+
+    #icons-menu, #icons-menu-ext {
+        margin-left: 15%;
+        margin-top: 3%;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -63,6 +68,11 @@
 
     #translation-adds {
         margin-left: 20%;
+    }
+
+    #icons-menu, #icons-menu-ext {
+        margin-left: 20%;
+        margin-top: 3%;
     }
 }
 
@@ -112,6 +122,40 @@
 #input-box {
     resize: none;
     box-shadow: 0px 10px 10px -10px;
+}
+
+#icons-menu {
+    position: absolute;
+    top: 190px;
+    left: 13px;
+    height: 10px;
+}
+
+//#icons-menu i.material-icons {
+//   margin-left: 10px;
+//    border-radius: 50%;
+//    box-shadow: 0px 0px 2px #888;
+//    padding: 2px;
+//  }
+
+#icons-menu-ext {
+    position: absolute;
+    top: 193px;
+    left: 70px;
+    height: 10px;
+}
+
+svg {
+    color: #808080;
+    margin-bottom: 5px;
+    margin-left: 15px;
+}
+
+#more-btn {
+    background-color: white;
+    border-radius: 50%;
+    border: none;
+    margin-bottom: 15px;
 }
 
 #translation-box {
