--- a/src/App.scss
+++ b/src/App.scss
@@ -154,6 +154,7 @@ svg {
 #more-btn {
     background-color: white;
     border-radius: 50%;
+    border-color: white;
     border: none;
     margin-bottom: 15px;
 }
