--- a/src/App.scss
+++ b/src/App.scss
@@ -96,10 +96,12 @@
     padding: 10px;
 }
 
-#dropdown-basic-button {
-    padding: 10px;
+.menu-flags {
+    border: 1px solid #bdbbbb;
+    border-radius: 3px;
+    background: #ffffff;
+    padding: 8px;
     color: #808080;
-    background-color: white;
 }
 
 .material-icons {
