resolvendo problemas de caracteres especiais com alteracao de textarea para div

--- a/src/App.scss
+++ b/src/App.scss
@@ -104,6 +104,10 @@
     color: #808080;
 }
 
+.translation-box {
+    height: 100px;
+}
+
 .material-icons {
     color: #808080;
     padding: 1px;
